Introduce generics to avoid explicit downcastings